--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,6 @@
 }
 body{
     font-family:'Roboto', sans-serif;
-    background-color: var(--main-color)
 }
 /*--------------------------------------------Шапка---------------------------*/
 .heading {
@@ -19,9 +18,11 @@ body{
 .unvisible {
     visibility: hidden;
 }
+.heading-studio{
+    color: var(--primary-text-color);
+}
 .heading-logo {
     font-family: 'Raleway', sans-serif;
-    font-style: normal;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
@@ -33,7 +34,6 @@ body{
     list-style: none;
 }
 .heading-link {
-    font-family: 'inherit';
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -52,7 +52,6 @@ body{
     list-style: none;
 }
 .contact-site-link {
-    font-family: 'inherit';
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -61,7 +60,6 @@ body{
     text-decoration: none;
 }
 .contact-tel-link {
-    font-family: 'inherit';
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -91,7 +89,7 @@ body{
     color: var(--header-color);
 }
 .btn-hero {
-    font-family: 'inherit' sans-serif;
+    font-family: inherit, sans-serif;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
@@ -157,7 +155,6 @@ body{
     color: var(--primary-text-color); 
 }
 .team-position {
-    font-size: 16px;
     line-height: 19px;
     letter-spacing: 0.03em;
     color: var(--secondary-text-color);
@@ -166,8 +163,14 @@ body{
 .footer {
     background-color: var(--secondary-color);
 }
+.footer-address {
+    font-style: normal;
+}
+.footer-studio {
+    color: var(--header-color);
+}
 .footer-logo {
-    font-family: 'Raleway' sans-serif;
+    font-family: 'Raleway', sans-serif;
     text-decoration: none;
     font-weight: 700;
     font-size: 26px;
@@ -179,9 +182,7 @@ body{
     list-style: none;
 }
 .adress-loc-text {
-    font-family: 'inherit' sans-serif;
     text-decoration: none;
-    font-style: normal;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
@@ -192,8 +193,6 @@ body{
     color: var(--logo-btn-color);
 }
 .adress-site-link {
-    font-family: 'inherit' sans-serif;
-    font-style: normal;
     text-decoration: none;
     font-size: 14px;
     line-height: 1.71;
@@ -205,8 +204,6 @@ body{
     color: var(--logo-btn-color);
 }
 .adress-tel-link {
-    font-family: 'inherit' sans-serif;
-    font-style: normal;
     text-decoration: none;
     font-size: 14px;
     line-height: 1.71;
@@ -222,7 +219,7 @@ body{
     list-style: none;
 }
 .btn-all {
-    font-family: 'inherit' sans-serif;
+    font-family: inherit, sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.63;
@@ -238,7 +235,7 @@ body{
     color: var(--header-color)
 }
 .btn-web {
-    font-family: 'inherit' sans-serif;
+    font-family: inherit, sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.63;
@@ -254,7 +251,7 @@ body{
     color: var(--header-color)
 }
 .btn-app {
-    font-family: 'inherit' sans-serif;
+    font-family: inherit, sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.63;
@@ -270,7 +267,7 @@ body{
     color: var(--header-color)
 }
 .btn-desighn {
-    font-family: 'inherit' sans-serif;
+    font-family: inherit, sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.63;
@@ -286,7 +283,7 @@ body{
     color: var(--header-color)
 }
 .btn-marketing {
-    font-family: 'inherit' sans-serif;
+    font-family: inherit, sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.63;
@@ -313,7 +310,6 @@ body{
     color: var(--primary-text-color);
 }
 .portfolio-text {
-    font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
     color: var(--secondary-text-color);
